--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,15 @@
             "MkOrm\\": "src/"
         }
     },
-    "autoload-dev":  {
+    "autoload-dev": {
         "psr-4": {
             "Test\\": "tests/"
         }
     },
     "require": {
         "php": ">=7.2",
+        "ext-pdo": "*",
+        "ext-json": "*",
         "vlucas/phpdotenv": "^3.1"
     },
     "require-dev": {
