--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_DEBUG=true
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mydb
+DB_DATABASE=mytestdb
 DB_USERNAME=root
 DB_PASSWORD=
 DB_CHARSET=utf8mb4
