--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "php": ">=7.2",
         "ext-pdo": "*",
         "ext-json": "*",
-        "vlucas/phpdotenv": "^3.1"
+        "vlucas/phpdotenv": "^3.1",
+        "symfony/console": "^4.2",
+        "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
