add bin to composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "bin": [
         "bin/mkORM"
     ],
+    "config": {
+        "bin-dir": "bin"
+    },
     "authors": [
         {
             "name": "mohammad hemmati",
