--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.3"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
